--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "ts-node-dev index.ts",
     "tsc": "tsc",
     "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --test"
   },
   "author": "elizon",
   "license": "ISC",
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "supertest": "^7.0.0",
     "ts-node-dev": "^2.0.0",
     "ts-standard": "^12.0.2",
     "typescript": "5.7.3"
